# Chronodoro-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: app.rs  audio.rs  lib.rs  main.rs  persistence.rs  ui.rs
src/core/: config.rs  phase.rs  timer.rs
