[package]
name = "chronodoro"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28"
egui   = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.18", default-features = true }
anyhow = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true